--- a/index.html
+++ b/index.html
@@ -21,11 +21,9 @@
             <img src="/image/elisa_logo.png" alt="Logo" width="240vw" height="90vh">
         </header>
 
-        <section class="frame one">ONE <img src="/image/artwork1.png" alt="artork 1"></section>
+        <section class="frame one">ONE <img src="./image/artwork1.png" alt="artork 1"></section>
         <section class="frame two">TWO</section>
         <section class="frame three">THREE</section>
     </div>
-
-
 </body>
 </html>
