--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <div class="container">
         <header class="header" id="logoHeader">
-            <img src="/image/elisa_logo.png" alt="Logo" width="240vw" height="90vh">
+            <img src="./image/elisa_logo.png" alt="Logo" width="240vw" height="90vh">
         </header>
 
         <section class="frame one">ONE <img src="./image/artwork1.png" alt="artork 1"></section>
