--- a/index.html
+++ b/index.html
@@ -19,11 +19,56 @@
     <div class="container">
         <header class="header" id="logoHeader">
             <img src="./image/elisa_logo.png" alt="Logo" width="240vw" height="90vh">
+
         </header>
 
-        <section class="frame one">ONE <img src="./image/artwork1.png" alt="artork 1"></section>
-        <section class="frame two">TWO</section>
-        <section class="frame three">THREE</section>
+        <section class="frame one">
+            <img src="./image/artwork1.png" alt="artwork 1">
+
+        </section>
+        <section class="frame two">
+            <img src="./image/artwork2.jpg" alt="artwork 2">
+        </section>
+        <section class="frame three">
+            <img src="./image/artwork3.png" alt="artwork 3">
+        </section>
+
+        <section class="frame four">
+            <img src="./image/artwork4.png" alt="artwork 4">
+        </section>
+
+        <section class="frame five">
+            <img src="./image/artwork5.png" alt="artwork 5">
+        </section>
+
+        <section class="frame six">
+            <img src="./image/artwork6.png" alt="artwork 6">
+        </section>
+
+        <section class="frame seven">
+            <img src="./image/artwork7.png" alt="artwork 7">
+        </section>
+
+        <section class="frame eight">
+            <img src="./image/artwork8.png" alt="artwork 8">
+        </section>
+
+        <section class="frame nine">
+            <img src="./image/artwork9.png" alt="artwork 9">
+        </section>
+
+        <section class="frame ten">
+            <img src="./image/artwork10.png" alt="artwork 10">
+        </section>
+
+        <footer class="footer" id="logoFooter">
+            <div>
+                Contact:
+            </div>
+            <div>
+                Elisa.Teigeler@student.nhlstenden.com / <a href="https://www.linkedin.com/in/elisa-teigeler/">LinkedIn</a> / <a href="https://www.instagram.com/elisa.teigeler/">Instagram</a>
+            </div>
+        </footer>
     </div>
 </body>
 </html>
