--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/ScrollTrigger.min.js"></script>
     <script type="module" src="index.js"></script>
-    
+
     <div class="container">
         <header class="header" id="logoHeader">
             <img src="./image/elisa_logo.png" alt="Logo" width="240vw" height="90vh">
@@ -62,6 +62,11 @@
         <section class="frame ten">
             <img src="./image/artwork10.png" alt="artwork 10">
         </section>
+
+        <section class="frame eleven">
+            <img src="./image/artwork11.png" alt="artwork 10">
+        </section>
+
 
         <footer class="footer" id="logoFooter">
             <div>
