--- a/index.html
+++ b/index.html
@@ -1,81 +1,91 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
 
     <title>Portfolio Elisa Teigeler</title>
-
-
-
-</head>
-<body>
-
+  </head>
+  <body>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/ScrollTrigger.min.js"></script>
     <script type="module" src="index.js"></script>
 
     <div class="container">
-        <header class="header" id="logoHeader">
-            <img src="./image/elisa_logo.png" alt="Logo" width="240vw" height="90vh">
+      <header class="header" id="logoHeader">
+        <img
+          src="./image/elisa_logo.png"
+          alt="Logo"
+          width="240vw"
+          height="90vh"
+        />
+      </header>
 
-        </header>
+      <section class="frame one">
+        <img src="./image/artwork1.png" alt="artwork 1" />
+      </section>
+      <section class="frame two">
+        <img src="./image/artwork2.jpg" alt="artwork 2" />
+      </section>
+      <section class="frame three">
+        <img src="./image/artwork3.png" alt="artwork 3" />
+      </section>
 
-        <section class="frame one">
-            <img src="./image/artwork1.png" alt="artwork 1">
+      <section class="frame four">
+        <img src="./image/artwork4.png" alt="artwork 4" />
+      </section>
 
-        </section>
-        <section class="frame two">
-            <img src="./image/artwork2.jpg" alt="artwork 2">
-        </section>
-        <section class="frame three">
-            <img src="./image/artwork3.png" alt="artwork 3">
-        </section>
+      <section class="frame five">
+        <img src="./image/artwork5.png" alt="artwork 5" />
+      </section>
 
-        <section class="frame four">
-            <img src="./image/artwork4.png" alt="artwork 4">
-        </section>
+      <section class="frame six">
+        <img src="./image/artwork6.png" alt="artwork 6" />
+      </section>
 
-        <section class="frame five">
-            <img src="./image/artwork5.png" alt="artwork 5">
-        </section>
+      <section class="frame seven">
+        <img src="./image/artwork7.png" alt="artwork 7" />
+      </section>
 
-        <section class="frame six">
-            <img src="./image/artwork6.png" alt="artwork 6">
-        </section>
+      <section class="frame eight">
+        <img src="./image/artwork8.png" alt="artwork 8" />
+      </section>
 
-        <section class="frame seven">
-            <img src="./image/artwork7.png" alt="artwork 7">
-        </section>
+      <section class="frame nine">
+        <img src="./image/artwork9.png" alt="artwork 9" />
+      </section>
 
-        <section class="frame eight">
-            <img src="./image/artwork8.png" alt="artwork 8">
-        </section>
+      <section class="frame ten">
+        <img src="./image/artwork10.png" alt="artwork 10" />
+      </section>
 
-        <section class="frame nine">
-            <img src="./image/artwork9.png" alt="artwork 9">
-        </section>
+      <section class="frame eleven">
+        <img src="./image/artwork11.png" alt="artwork 11" />
+      </section>
 
-        <section class="frame ten">
-            <img src="./image/artwork10.png" alt="artwork 10">
-        </section>
+      <section class="frame twelve">
+        <img src="./image/artwork12.png" alt="artwork 12" />
+      </section>
 
-        <section class="frame eleven">
-            <img src="./image/artwork11.png" alt="artwork 10">
-        </section>
+      <section class="frame thirteen">
+        <img src="./image/artwork13.png" alt="artwork 13" />
+      </section>
 
+      <section class="frame fourteen">
+        <img src="./image/artwork14.png" alt="artwork 14" />
+      </section>
 
-        <footer class="footer" id="logoFooter">
-            <div>
-                Contact:
-            </div>
-            <div>
-                Elisa.Teigeler@student.nhlstenden.com / <a href="https://www.linkedin.com/in/elisa-teigeler/">LinkedIn</a> / <a href="https://www.instagram.com/elisa.teigeler/">Instagram</a>
-            </div>
-        </footer>
+      <footer class="footer" id="logoFooter">
+        <div>Contact:</div>
+        <div>
+          Elisa.Teigeler@student.nhlstenden.com /
+          <a href="https://www.linkedin.com/in/elisa-teigeler/">LinkedIn</a> /
+          <a href="https://www.instagram.com/elisa.teigeler/">Instagram</a>
+        </div>
+      </footer>
     </div>
-</body>
+  </body>
 </html>
